--- a/_articles/RJ-2023-068/RJ-2023-068.Rmd
+++ b/_articles/RJ-2023-068/RJ-2023-068.Rmd
@@ -20,7 +20,7 @@ author:
   address:
   - C/ Dr. Moliner, 50, 46100
   - Burjassot, Spain
-  - 0000-0002-0751-7315
+  orcid: 0000-0002-0751-7315
 - name: Virgilio Gómez-Rubio
   affiliation: |-
     Department of Mathematics, E.T.S. Ingeniería Industrial-Albacete,
@@ -30,7 +30,7 @@ author:
   address:
   - Av. de España, s/n, 02071
   - Albacete, Spain
-  - 0000-0002-4791-3072
+  orcid: 0000-0002-4791-3072
 - name: Roger S. Bivand
   affiliation: Department of Economics, Norwegian School of Economics
   email: |
@@ -38,7 +38,7 @@ author:
   address:
   - Helleveien 30, N-5045
   - Bergen, Norway
-  - 0000-0003-2392-6140
+  orcid: 0000-0003-2392-6140
 - name: Michela Cameletti
   affiliation: Department of Economics, Universitá degli studi di Bergamo
   email: |
@@ -46,14 +46,14 @@ author:
   address:
   - Via dei Caniana 2. IT-24127
   - Bergamo, Italy
-  - 0000-0002-6502-7779
+  orcid: 0000-0002-6502-7779
 - name: Håvard Rue
   affiliation: King Abdullah University of Science and Technology
   email: |
     haavard.rue@kaust.edu.sa
   address:
   - Thuwal, Saudi Arabia
-  - 0000-0002-0222-1881
+  orcid: 0000-0002-0222-1881
 date: '2023-12-18'
 date_received: '2022-12-31'
 journal:
