--- a/articles/RJ-2023-073/RJ-2023-073.tex
+++ b/articles/RJ-2023-073/RJ-2023-073.tex
@@ -1,5 +1,5 @@
 % !TeX root = RJwrapper.tex
-\title{\texttt{mathml}: Translate R Expressions to MathML and LaTeX}
+\title{mathml: Translate R Expressions to MathML and LaTeX}
 
 
 \author{by Matthias Gondan and Irene Alfarone}
@@ -13,14 +13,14 @@ This R~package translates R~objects to suitable elements in MathML or LaTeX, the
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
-The R~extension of the markdown language (Xie, Allaire, and Grolemund
-2018; Allaire et al.~2023) enables reproducible statistical reports with
+The R~extension of the markdown language (Xie, Allaire, and Grolemund 2018; Allaire et al. 2023)
+enables reproducible statistical reports with
 nice typesetting in HTML, Microsoft Word, and LaTeX. Moreover, since
 recently (R Core Team 2022, version 4.2), Rs manual pages include
-support for mathematical expressions (Sarkar and Hornik 2022;
-Viechtbauer 2022), which is already a big improvement. However, except
-for special cases such as regression models (Anderson, Heiss, and
-Sumners 2023) and R's own plotmath annotation, rules for the mapping of
+support for mathematical expressions (Sarkar and Hornik 2022; Viechtbauer 2022),
+which is already a big improvement. However, except
+for special cases such as regression models (Anderson, Heiss, and Sumners 2023)
+and R's own plotmath annotation, rules for the mapping of
 built-in language elements to their mathematical representation are
 still lacking. So far, R~expressions such as \texttt{pbinom(k,~N,~p)} are
 printed as they are and pretty mathematical formulae such as
@@ -31,8 +31,8 @@ to read.
 
 The present R~package defines a set of rules for the automatic
 translation of R~expressions to mathematical output in R~Markdown
-documents (Xie, Dervieux, and Riederer 2020) and Shiny Apps (Chang et
-al.~2022). The translation is done by an embedded Prolog interpreter
+documents (Xie, Dervieux, and Riederer 2020) and Shiny Apps (Chang et al. 2022).
+The translation is done by an embedded Prolog interpreter
 that maps nested expressions recursively to MathML and LaTeX/MathJax,
 respectively. User-defined hooks enable extension of the set of rules,
 for example, to represent specific R~elements by custom mathematical
@@ -42,8 +42,8 @@ The main feature of the package is that the same R~expressions and
 equations can be used for both mathematical typesetting and
 calculations. This saves time and potentially reduces mistakes, as will
 be illustrated below. Readers should have basic knowledge of knitr and
-R~Markdown to be able to follow this article (Xie 2023; Allaire et al.
-2023), while to extend and customize the package, some basic knowledge
+R~Markdown to be able to follow this article (Xie 2023; Allaire et al. 2023),
+while to extend and customize the package, some basic knowledge
 of Prolog is needed.
 
 The paper is organized as follows. We start with a description of the
@@ -89,8 +89,8 @@ term
 \end{verbatim}
 
 As can be seen from the output, to the variable \texttt{term} is not assigned
-the result of the calculation, but instead an R~call (see, e.g., Wickham
-2019, for details on ``non-standard evaluation''), which can eventually be
+the result of the calculation, but instead an R~call (see, e.g., Wickham 2019,
+for details on ``non-standard evaluation''), which can eventually be
 evaluated with \texttt{eval()},
 
 \begin{verbatim}
@@ -123,8 +123,8 @@ are necessary in edge cases. The package also includes a function
 \texttt{mathout()} that wraps a call to \texttt{mathml()} for HTML output and
 \texttt{mathjax()} for LaTeX output. Moreover, the function \texttt{math(x)} adds the
 class \texttt{"math"} to its argument, such that a special knitr printing
-function is invoked (see the vignette on custom print methods in Xie
-2023). An R~Markdown code chunk with \texttt{mathout(term)} thus produces:
+function is invoked (see the vignette on custom print methods in Xie 2023).
+An R~Markdown code chunk with \texttt{mathout(term)} thus produces:
 
 \({P}_{\mathrm{Bi}}{\left({{X}{\le}{k}}{{;}{{N}{{,}{p}}}}\right)}\)
 
@@ -298,30 +298,6 @@ A == B & \({A}{=}{B}\) & crossprod(A, B) & \({{A}^{\mathrm{T}}}{\times}{B}\) & A
 A \textless- B & \({A}{=}{B}\) & is.null(A) & \({A}{=}{\emptyset}\) & & \(\mathrm{}\) \\
 \end{longtable}
 
-\hypertarget{builtin-functions}{%
-\subsection{Builtin functions}\label{builtin-functions}}
-
-There is support for most functions from package \texttt{base}, with adequate
-use and omission of parentheses.
-
-\begin{verbatim}
-term <- quote(sin(x) + sin(x)^2L + cos(pi/2L) + tan(2L*pi) * expm1(x))
-math(term)
-\end{verbatim}
-
-\({{{\sin{x}}{+}{{\left(\sin{x}\right)}^{2}}}{+}{\cos{\left({\pi}{/}{2}\right)}}}{+}{{\tan{\left({2}{{}}{\pi}\right)}}{\cdot}{\left({\exp{x}}{-}{1}\right)}}\)
-
-\begin{verbatim}
-term <- quote(choose(N, k) + abs(x) + sqrt(x) + floor(x) + exp(frac(x, y)))
-math(term)
-\end{verbatim}
-
-\({{{{\binom{N}{k}}{+}{{\left\vert{x}\right\vert}}}{+}{\sqrt{x}}}{+}{\lfloor{x}\rfloor}}{+}{\exp{\left(\frac{x}{y}\right)}}\)
-
-A few more examples are shown in Table
-\protect\hyperlink{tab:base-stats}{2},
-including functions from \texttt{stats}.
-
 \hypertarget{tab:base-stats}{}
 \begin{longtable}[]{@{}llll@{}}
 \caption{R functions from base and stats}\tabularnewline
@@ -353,14 +329,38 @@ mean(X) & \(\overline{X}\) & pt(t, N - 1L) & \(P{\left({{T}{\le}{t}}{{;}{{{N}{-}
 abs(x) & \({\left\vert{x}\right\vert}\) & qt(alpha/2L, N - 1L) & \({T}_{{\alpha}{/}{2}}{\left({{N}{-}{1}}{{\,}{\mathrm{df}}}\right)}\) \\
 \end{longtable}
 
+\hypertarget{builtin-functions}{%
+\subsection{Builtin functions}\label{builtin-functions}}
+
+There is support for most functions from package \texttt{base}, with adequate
+use and omission of parentheses.
+
+\begin{verbatim}
+term <- quote(sin(x) + sin(x)^2L + cos(pi/2L) + tan(2L*pi) * expm1(x))
+math(term)
+\end{verbatim}
+
+\({{{\sin{x}}{+}{{\left(\sin{x}\right)}^{2}}}{+}{\cos{\left({\pi}{/}{2}\right)}}}{+}{{\tan{\left({2}{{}}{\pi}\right)}}{\cdot}{\left({\exp{x}}{-}{1}\right)}}\)
+
+\begin{verbatim}
+term <- quote(choose(N, k) + abs(x) + sqrt(x) + floor(x) + exp(frac(x, y)))
+math(term)
+\end{verbatim}
+
+\({{{{\binom{N}{k}}{+}{{\left\vert{x}\right\vert}}}{+}{\sqrt{x}}}{+}{\lfloor{x}\rfloor}}{+}{\exp{\left(\frac{x}{y}\right)}}\)
+
+A few more examples are shown in Table
+\protect\hyperlink{tab:base-stats}{2},
+including functions from \texttt{stats}.
+
 \hypertarget{custom-functions}{%
 \subsection{Custom functions}\label{custom-functions}}
 
 For self-written functions, the matter is somewhat more complicated. For
-a function such as \texttt{g~\textless{}-~function(...)~...}, the name \emph{g} is not
-transparent to R, because only the function body is represented. We can
-still display functions in the form \texttt{head(x)~=~body} if we embed the
-object to be shown into a call \texttt{"\textless{}-"(head,~body)}.
+instance, if we consider a function such as \texttt{g~\textless{}-~function(...)~...},
+the name \emph{g} is not transparent to R, because only the function body
+is represented. We can still display functions in the form \texttt{head(x)~=~body}
+if we embed the object to be shown into a call \texttt{"\textless{}-"(head,~body)}.
 
 \begin{verbatim}
 sgn <- function(x)
@@ -437,11 +437,11 @@ that calls R~from Prolog. This predicate is used to evaluate
 \texttt{formalArgs(args(sin))} and returns the names of the arguments of
 \texttt{sin()}, namely, \emph{x}.
 
-Note that in the example above, the quoted term is an abbreviation for
-\texttt{call("integrate",~quote(sin),~...)}, with \texttt{sin} being an R~symbol, not
-a function. While the R~function \texttt{integrate()} can handle both symbols
-and functions, mathml needs the symbol because it is unable to determine
-the function name of custom functions.
+Above, the quoted term is an abbreviation for \texttt{call("integrate",~quote(sin),~...)},
+with \texttt{sin} being an R~symbol, not a function. While the R~function
+\texttt{integrate()} can handle both symbols and functions, mathml needs the
+symbol because it is unable to determine the function name of custom
+functions.
 
 \hypertarget{names-and-order-of-arguments}{%
 \subsection{Names and order of arguments}\label{names-and-order-of-arguments}}
@@ -648,7 +648,7 @@ a new explanation of redundancy gains that occur when observers respond
 to stimuli of different sources, and the same information is presented
 on two or more channels. In Schwarz's (1994) model, decision-making
 builds on a process of noisy accumulation of information over time
-(e.g., Ratcliff et al.~2016). In redundant stimuli, the model assumes a
+(e.g., Ratcliff et al. 2016). In redundant stimuli, the model assumes a
 superposition of channel-specific diffusion processes that eventually
 reach an absorbing barrier to elicit the response. For a detailed
 description the reader may refer to the original article.
@@ -837,6 +837,12 @@ the barrier \(c\) is only a scaling parameter.
 The best fitting parameter values and their confidence intervals are
 given in Table \protect\hyperlink{tab:params}{5}.
 
+The goodness-of-fit statistic indicates some lack of fit,
+\(X^2(8\ \mathrm{df}) = 28.34, p = 0.0004\). Given the large trial
+numbers in the original study, this is not an unexpected result. For
+more detail, especially on fitting the observed standard deviations, the
+reader is referred to the original paper (Schwarz 1994).
+
 \hypertarget{tab:params}{}
 \begin{longtable}[]{@{}lll@{}}
 \caption{Model fit}\tabularnewline
@@ -856,12 +862,6 @@ Parameter & Estimate & CI \\
 \({\sigma}_{\mathrm{B}}\) & \(13.46\) & \(\left({7.80}{{,}{19.11}}\right)\) \\
 \({\mu}_{\mathrm{M}}\) & \(161.09\) & \(\left({156.91}{{,}{165.28}}\right)\) \\
 \end{longtable}
-
-The goodness-of-fit statistic indicates some lack of fit,
-\(X^2(8\ \mathrm{df}) = 28.34, p = 0.0004\). Given the large trial
-numbers in the original study, this is not an unexpected result. For
-more detail, especially on fitting the observed standard deviations, the
-reader is referred to the original paper (Schwarz 1994).
 
 \hypertarget{conclusion}{%
 \section{Conclusion}\label{conclusion}}
@@ -927,7 +927,7 @@ in programming.
 One limitation of the package is the lack of a convenient way to insert
 line breaks. This is mostly due to lacking support by MathML and LaTeX
 renderers. For example, in its current stage, the LaTeX package breqn
-(Robertson et al.~2021) is mostly a proof of concept. Moreover, mathml
+(Robertson et al. 2021) is mostly a proof of concept. Moreover, mathml
 only works in one direction, that is, it is not possible to translate
 from LaTeX or HTML back to R (see Capretto 2023, for an example).
 
@@ -946,7 +946,7 @@ at \url{https://github.com/mgondan/mathml}.
 For convenience, the translation of the R expressions is achieved
 through a Prolog interpreter provided by another R~package
 \href{https://CRAN.R-project.org/package=rolog}{rolog} (Gondan 2022). If a
-version of SWI-Prolog (Wielemaker et al.~2012) is found on the system,
+version of SWI-Prolog (Wielemaker et al. 2012) is found on the system,
 \href{https://CRAN.R-project.org/package=rolog}{rolog} connects to it.
 Alternatively, the SWI-Prolog runtime libraries can be conveniently
 accessed by installing the R~package
@@ -958,8 +958,8 @@ of facts and rules for knowledge and grammar, as well as its efficient
 built-in search engine for closed world domains. Whereas Prolog is weak
 in statistical computation, but strong in symbolic manipulation, the
 converse may be said for the R~language. rolog bridges this gap by
-providing an interface to a SWI-Prolog distribution (Wielemaker et al.
-2012) in R. The communication between the two systems is mainly in the
+providing an interface to a SWI-Prolog distribution (Wielemaker et al. 2012)
+in R. The communication between the two systems is mainly in the
 form of queries from R~to Prolog, but two Prolog functions allow ring
 back and evaluation of terms in R.
 
@@ -1014,8 +1014,8 @@ LaTeX terms.
 \subsection{Linear models}\label{linear-models}}
 
 To render the model equation of a linear model such as
-\texttt{lm(EOT~\textasciitilde{}~T0~+~Therapy,~data=d)} in mathematical form (see also
-Anderson, Heiss, and Sumners 2023), it is sufficient to map the
+\texttt{lm(EOT~\textasciitilde{}~T0~+~Therapy,~data=d)} in mathematical form (see also Anderson, Heiss, and Sumners 2023),
+it is sufficient to map the
 \texttt{Formula} in \texttt{lm(Formula,~Data)} to its respective equation. This can be
 done in two ways, using either the hooks described above, or a new
 \texttt{math/2} macro at the Prolog end.
@@ -1052,6 +1052,9 @@ math(term)
 \end{verbatim}
 
 \({EOT}{=}{{{{b}_{0}}{+}{{{{b}_{T0}}{{}}{T0}}{+}{{{b}_{Therapy}}{{}}{Therapy}}}}{+}{\epsilon}}\)
+
+See the section above on short mathematical names for replacing
+lengthy R labels.
 
 \hypertarget{n-th-root}{%
 \subsection{\texorpdfstring{\(n\)-th root}{n-th root}}\label{n-th-root}}
@@ -1140,85 +1143,74 @@ Supported by the Erasmus+ program of the European Commission
 \addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
-\begin{CSLReferences}{0}{0}
-\end{CSLReferences}
+\begin{CSLReferences}{1}{0}
+\leavevmode\vadjust pre{\hypertarget{ref-rmarkdown}{}}%
+Allaire, J. J., Y. Xie, C. Dervieux, J. McPherson, J. Luraschi, K. Ushey, A. Atkins, et al. 2023. \emph{Rmarkdown: Dynamic Documents for {R}}. \url{https://github.com/rstudio/rmarkdown}.
 
-Allaire, J. J., Y. Xie, C. Dervieux, J. McPherson, J. Luraschi, K.
-Ushey, A. Atkins, et al.~2023. \emph{Rmarkdown: Dynamic Documents for R}.
-\url{https://github.com/rstudio/rmarkdown}.
+\leavevmode\vadjust pre{\hypertarget{ref-equatiomatic}{}}%
+Anderson, D., A. Heiss, and J. Sumners. 2023. \emph{Equatiomatic: Transform Models into 'LaTeX' Equations}.
 
-Anderson, D., A. Heiss, and J. Sumners. 2023. \emph{Equatiomatic: Transform
-Models into `LaTeX' Equations}.
+\leavevmode\vadjust pre{\hypertarget{ref-pracma}{}}%
+Borchers, H. W. 2022. \emph{{pracma}: Practical Numerical Math Functions}. \url{https://CRAN.R-project.org/package=pracma}.
 
-Borchers, H. W. 2022. \emph{pracma: Practical Numerical Math Functions}.
-\url{https://CRAN.R-project.org/package=pracma}.
+\leavevmode\vadjust pre{\hypertarget{ref-latex2r}{}}%
+Capretto, T. 2023. \emph{{latex2r}: Translate Latex Formulas to {R} Code}. \url{https://github.com/tomicapretto/latex2r}.
 
-Capretto, T. 2023. \emph{latex2r: Translate Latex Formulas to R Code}.
-\url{https://github.com/tomicapretto/latex2r}.
+\leavevmode\vadjust pre{\hypertarget{ref-Chang2022}{}}%
+Chang, W., J. Cheng, J. J. Allaire, C. Sievert, B. Schloerke, Y. Xie, J. Allen, J. McPherson, A. Dipert, and B. Borges. 2022. \emph{Shiny: Web Application Framework for {R}}. \url{https://CRAN.R-project.org/package=shiny}.
 
-Chang, W., J. Cheng, J. J. Allaire, C. Sievert, B. Schloerke, Y. Xie, J.
-Allen, J. McPherson, A. Dipert, and B. Borges. 2022. \emph{Shiny: Web
-Application Framework for R}.
-\url{https://CRAN.R-project.org/package=shiny}.
+\leavevmode\vadjust pre{\hypertarget{ref-rolog}{}}%
+Gondan, M. 2022. \emph{{rolog}: Query {SWI}-{P}rolog from {R}}. \url{https://github.com/mgondan/rolog}.
 
-Gondan, M. 2022. \emph{rolog: Query SWI-Prolog from R}.
-\url{https://github.com/mgondan/rolog}.
+\leavevmode\vadjust pre{\hypertarget{ref-rswipl}{}}%
+---------. 2023. \emph{{rswipl}: Embed {SWI}-{P}rolog}. \url{https://CRAN.R-project.org/package=rswipl}.
 
----------. 2023. \emph{rswipl: Embed SWI-Prolog}.
-\url{https://CRAN.R-project.org/package=rswipl}.
+\leavevmode\vadjust pre{\hypertarget{ref-green1977}{}}%
+Green, T. R. G. 1977. {``Conditional Program Statements and Their Comprehensibility to Professional Programmers.''} \emph{Journal of Occupational Psychology} 50: 93--109.
 
-Green, T. R. G. 1977. ``Conditional Program Statements and Their
-Comprehensibility to Professional Programmers.'' \emph{Journal of Occupational
-Psychology} 50: 93--109.
-
+\leavevmode\vadjust pre{\hypertarget{ref-pandoc}{}}%
 MacFarlane, J. 2022. \emph{Pandoc: A Universal Document Converter}.
 
-Miller, J. O. 1986. ``Timecourse of Coactivation in Bimodal Divided
-Attention.'' \emph{Perception \& Psychophysics} 40: 331--43.
+\leavevmode\vadjust pre{\hypertarget{ref-miller}{}}%
+Miller, J. O. 1986. {``Timecourse of Coactivation in Bimodal Divided Attention.''} \emph{Perception \& Psychophysics} 40: 331--43.
 
-Murrell, P., and R. Ihaka. 2000. ``An Approach to Providing Mathematical
-Annotation in Plots.'' \emph{Journal of Computational and Graphical
-Statistics} 9: 582--99.
+\leavevmode\vadjust pre{\hypertarget{ref-murrell2000}{}}%
+Murrell, P., and R. Ihaka. 2000. {``An Approach to Providing Mathematical Annotation in Plots.''} \emph{Journal of Computational and Graphical Statistics} 9: 582--99.
 
-R Core Team. 2022. \emph{R: A Language and Environment for Statistical
-Computing}. Vienna, Austria: R Foundation for Statistical Computing.
-\url{https://www.R-project.org/}.
+\leavevmode\vadjust pre{\hypertarget{ref-R}{}}%
+R Core Team. 2022. \emph{R: A Language and Environment for Statistical Computing}. Vienna, Austria: R Foundation for Statistical Computing. \url{https://www.R-project.org/}.
 
-Ratcliff, R., P. L. Smith, S. D. Brown, and G. McKoon. 2016. ``Diffusion
-Decision Model: Current Issues and History.'' \emph{Trends in Cognitive
-Sciences} 20: 260--81.
+\leavevmode\vadjust pre{\hypertarget{ref-ratcliff2016}{}}%
+Ratcliff, R., P. L. Smith, S. D. Brown, and G. McKoon. 2016. {``Diffusion Decision Model: Current Issues and History.''} \emph{Trends in Cognitive Sciences} 20: 260--81.
 
-Robertson, W., J. Wright, F. Mittelbach, and U. Fischer. 2021. \emph{Breqn:
-Automatic Line Breaking of Displayed Equations}.
-\url{https://www.ctan.org/pkg/breqn}.
+\leavevmode\vadjust pre{\hypertarget{ref-breqn}{}}%
+Robertson, W., J. Wright, F. Mittelbach, and U. Fischer. 2021. \emph{Breqn: Automatic Line Breaking of Displayed Equations}. \url{https://www.ctan.org/pkg/breqn}.
 
-Sarkar, D., and K. Hornik. 2022. \emph{Enhancements to HTML Documentation}.
-\url{https://blog.r-project.org/2022/04/08/enhancements-to-html-documentation/index.html}.
+\leavevmode\vadjust pre{\hypertarget{ref-Sarkar2022}{}}%
+Sarkar, D., and K. Hornik. 2022. \emph{Enhancements to {HTML} {D}ocumentation}. \url{https://blog.r-project.org/2022/04/08/enhancements-to-html-documentation/index.html}.
 
-Schwarz, W. 1994. ``Diffusion, Superposition, and the Redundant-Targets
-Effect.'' \emph{Journal of Mathematical Psychology} 38: 504--20.
+\leavevmode\vadjust pre{\hypertarget{ref-schwarz1994}{}}%
+Schwarz, W. 1994. {``Diffusion, Superposition, and the Redundant-Targets Effect.''} \emph{Journal of Mathematical Psychology} 38: 504--20.
 
-Viechtbauer, W. 2022. \emph{mathjaxr: Using `Mathjax' in Rd Files}.
-\url{https://CRAN.R-project.org/package=mathjaxr}.
+\leavevmode\vadjust pre{\hypertarget{ref-Viechtbauer2022}{}}%
+Viechtbauer, W. 2022. \emph{{mathjaxr}: Using 'Mathjax' in Rd Files}. \url{https://CRAN.R-project.org/package=mathjaxr}.
 
-Wickham, H. 2019. \emph{Advanced R}. Cambridge: Chapman; Hall/CRC.
+\leavevmode\vadjust pre{\hypertarget{ref-Wickham2019}{}}%
+Wickham, H. 2019. \emph{Advanced {R}}. Cambridge: Chapman; Hall/CRC.
 
-Wielemaker, J., T. Schrijvers, M. Triska, and T. Lager. 2012.
-``SWI-Prolog.'' \emph{Theory and Practice of Logic Programming} 12 (1-2):
-67--96.
+\leavevmode\vadjust pre{\hypertarget{ref-swipl}{}}%
+Wielemaker, J., T. Schrijvers, M. Triska, and T. Lager. 2012. {``{SWI-Prolog}.''} \emph{Theory and Practice of Logic Programming} 12 (1-2): 67--96.
 
-Xie, Y. 2023. \emph{knitr: A General-Purpose Package for Dynamic Report
-Generation in R}. \url{https://yihui.org/knitr/}.
+\leavevmode\vadjust pre{\hypertarget{ref-knitr}{}}%
+Xie, Y. 2023. \emph{{knitr}: A General-Purpose Package for Dynamic Report Generation in {R}}. \url{https://yihui.org/knitr/}.
 
-Xie, Y., J. J. Allaire, and G. Grolemund. 2018. \emph{R Markdown: The
-Definitive Guide}. Boca Raton, Florida: Chapman; Hall/CRC.
-\url{https://bookdown.org/yihui/rmarkdown}.
+\leavevmode\vadjust pre{\hypertarget{ref-Xie2018}{}}%
+Xie, Y., J. J. Allaire, and G. Grolemund. 2018. \emph{{R} Markdown: The Definitive Guide}. Boca Raton, Florida: Chapman; Hall/CRC. \url{https://bookdown.org/yihui/rmarkdown}.
 
-Xie, Y., C. Dervieux, and E. Riederer. 2020. \emph{R Markdown Cookbook}.
-Cambridge: Chapman; Hall/CRC.
+\leavevmode\vadjust pre{\hypertarget{ref-Xie2020}{}}%
+Xie, Y., C. Dervieux, and E. Riederer. 2020. \emph{R Markdown Cookbook}. Cambridge: Chapman; Hall/CRC.
 
-\hypertarget{references-1}{%
-\section{References}\label{references-1}}
+\end{CSLReferences}
 
 
 \address{%
