RJ-2023-062 [2022-58]: add missing author

--- a/_articles/RJ-2023-062/RJ-2023-062.Rmd
+++ b/_articles/RJ-2023-062/RJ-2023-062.Rmd
@@ -24,6 +24,18 @@ author:
   affiliation: KU Leuven, Faculty of Psychology and Educational Sciences
   email: |
     iven.vanmechelen@kuleuven.be
+  address:
+  - Tiensestraat 102 - Box 3713
+  - '3000'
+  - Belgium
+- name: Kristof Meers
+  affiliation: KU Leuven, Faculty of Psychology and Educational Sciences
+  email: |
+    kristof.meers@kuleuven.be
+  address:
+  - Tiensestraat 102 - Box 3713
+  - '3000'
+  - Belgium
 date: '2023-12-18'
 date_received: '2022-03-15'
 journal:
