--- a/_articles/RJ-2023-062/RJ-2023-062.tex
+++ b/_articles/RJ-2023-062/RJ-2023-062.tex
@@ -1,13 +1,13 @@
 % !TeX root = RJwrapper.tex
-\title{C443: An R-package to see a forest for the trees}
+\title{C443: An R package to See a Forest for the Trees}
 
 
-\author{by Aniek Sies and Iven Van Mechelen}
+\author{by Aniek Sies, Iven Van Mechelen, and Kristof Meers}
 
 \maketitle
 
 \abstract{%
-Classification trees, well-known for their ease of interpretation, are a widely used tool to solve statistical learning problems. However, researchers often end up with a forest rather than an individual classification tree, which implies a major cost due to the loss of the transparency of individual trees. Therefore, an important challenge is to enjoy the benefits of forests without paying this cost. In this paper, we propose the R-package C443. The C443 methodology simplifies a forest into one or a few condensed summary trees, to gain insight into its central tendency and heterogeneity. This is done by clustering the trees in the forest based on similarities between them, and on post-processing the clustering output. We will elaborate upon the implementation of the methodology in the package, and will illustrate its use with three examples.
+Classification trees, well-known for their ease of interpretation, are a widely used tool to solve statistical learning problems. However, researchers often end up with a forest rather than an individual classification tree, which implies a major cost due to the loss of the transparency of individual trees. Therefore, an important challenge is to enjoy the benefits of forests without paying this cost. In this paper, we propose the R package C443. The C443 methodology simplifies a forest into one or a few condensed summary trees, to gain insight into its central tendency and heterogeneity. This is done by clustering the trees in the forest based on similarities between them, and on post-processing the clustering output. We will elaborate upon the implementation of the methodology in the package, and will illustrate its use with three examples.
 }
 
 \input{RJ-2023-062-src.tex}
@@ -29,9 +29,19 @@ Tiensestraat 102 - Box 3713\\ 3000\\ Belgium\\
 \address{%
 Iven Van Mechelen\\
 KU Leuven, Faculty of Psychology and Educational Sciences\\%
-\\
+Tiensestraat 102 - Box 3713\\ 3000\\ Belgium\\
 %
 %
 %
 \href{mailto:iven.vanmechelen@kuleuven.be}{\nolinkurl{iven.vanmechelen@kuleuven.be}}%
+}
+
+\address{%
+Kristof Meers\\
+KU Leuven, Faculty of Psychology and Educational Sciences\\%
+Tiensestraat 102 - Box 3713\\ 3000\\ Belgium\\
+%
+%
+%
+\href{mailto:kristof.meers@kuleuven.be}{\nolinkurl{kristof.meers@kuleuven.be}}%
 }
