updated editorial board

--- a/index.Rmd
+++ b/index.Rmd
@@ -119,14 +119,13 @@ rejected, in progress or accepted/published. Papers labelled 'in progress' are u
 
 ### Editor-in-Chief
 
-Simon Urbanek, The University of Auckland, New Zealand
+Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands
 r-journal@r-project.org
 
 ### Executive editors
 
+- Simon Urbanek, The University of Auckland, New Zealand
 - Rob Hyndman, Monash University, Australia
-- Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands
-- Catherine Hurley, Maynooth University, Ireland 
 - Emi Tanaka, Australian National University, Australia
 
 ### Associate editors
