added two AEs and past AE section

--- a/index.Rmd
+++ b/index.Rmd
@@ -132,7 +132,6 @@ r-journal@r-project.org
 
 - Rafael de Andrade Moral, Maynooth University, Ireland
 - Vincent Arel-Bundock, University of Montreal, Canada
-- Louis Aslett, Durham University, UK 
 - Rasmus Bååth, Lund University, Sweden
 - Przemek Biecek, University of Warsaw, Poland
 - Chris Brunsdon, Maynooth University, Ireland
@@ -143,14 +142,14 @@ r-journal@r-project.org
 - Isabella Gollini, University College Dublin, Ireland
 - Michael Kane, Yale University, USA
 - Adam Loy, Carleton College, USA 
-- Elizabeth Sweeney, University of Pennsylvania, USA
-- Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka
 - Nicholas Tierney, Telethon Kids, Australia
 - Susan Vanderplas, University of Nebraska, Lincoln, USA
 - Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA
 - Lucy D'Agostino McGowan, Wake Forest University, USA
 - Yanfei Kang, Beihang University, China
 - Ursula Laa, BOKU Vienna, Austria
+- Matthias Templ, University of Applied Sciences and Arts Northwestern Switzerland, Switzerland
+- Romain Lesur, INSEE, France
 
 ### Editorial advisory board
 
@@ -162,3 +161,20 @@ r-journal@r-project.org
 ### Governance
 
 The R Journal is run under the auspices of [the R Foundation](https://www.r-project.org/foundation/), and editors of the Journal are appointed by the Foundation board.
+
+
+### Previous Associate Editors
+
+- Earo Wang (2020-2022)
+- Beth Atkinson (2020-2022)
+- Kieran Healy (2021-2022)
+- Elizabeth Sweeney (2021-2023)
+- Louis Aslett (2021-2023)
+- Przemek Biecek (2021-2023)
+- Priyanga Dilini Talagala (2021-2023)
+- Simone Blomberg (2021-2022)
+- Mark van der Loo (2021-2022)
+- Emi Tanaka (2022-2023)
+
+
+
