added past editors-in-chief

--- a/index.Rmd
+++ b/index.Rmd
@@ -162,8 +162,15 @@ r-journal@r-project.org
 
 The R Journal is run under the auspices of [the R Foundation](https://www.r-project.org/foundation/), and editors of the Journal are appointed by the Foundation board.
 
+### Past Editors-in-Chief
 
-### Previous Associate Editors
+Vince Carey (2009), Peter Dalgaard (2010), Heather Turner (2011), Martyn
+Plummer (2012), Hadley Wickham (2013), Deepayan Sarkar (2014), Bettina Grün
+(2015), Michael Lawrence (2016), Roger Bivand (2017), John Verzani (2018),
+Norman Matloff (2019), Michael Kane (2020), Dianne Cook (2021), Catherine
+Hurley (2022), Simon Urbanek (2023)
+
+### Past Associate Editors
 
 - Earo Wang (2020-2022)
 - Beth Atkinson (2020-2022)
