--- a/index.Rmd
+++ b/index.Rmd
@@ -150,6 +150,15 @@ r-journal@r-project.org
 - Ursula Laa, BOKU Vienna, Austria
 - Matthias Templ, University of Applied Sciences and Arts Northwestern Switzerland, Switzerland
 - Romain Lesur, INSEE, France
+- Jouni Helske, University of Turku, Finland
+- Christoph Sax, Cynkra, Switzerland
+- Thomas Fung, Macquarie University, Australia
+- Thiyanga Talagala, University of Sri Jayewardenepura, Sri Lanka
+- Xiaoqian Wang, Monash University, Australia
+- Ivan Svetunkov, Lancaster University, UK
+- Wenjie Wang, Eli Lilly and Company, USA
+
+
 
 ### Editorial advisory board
 
