--- a/_news/RJ-2023-4-rf/RJ-2023-4-rf.Rmd
+++ b/_news/RJ-2023-4-rf/RJ-2023-4-rf.Rmd
@@ -13,168 +13,303 @@ output:
     self_contained: yes
     toc: no
 volume: 15
-issue: 3
+issue: 4
 slug: RJ-2023-4-rf
 journal:
-  lastpage: 299
+  lastpage: 301
   firstpage: 298
 
 ---
 
-
 # Donations and members
 
-Membership fees and donations received between 
-2023-05-09 and 2023-10-20.
+\indent \indent Membership fees and donations received between 
+
+2023-10-20 and 2024-04-12.
+
 
 # Donations
 
-\indent \indent Daniel J. Duarte (Netherlands)
+\indent \indent b-data GmbH (Switzerland)
 
-Spyridon Fortis (United States)
+SAS EUREKA MER (France)
 
-Dmitriy Grishin (United States)
+Gilberto Camara (Brazil)
 
-Ken Ikeda (Japan)
+Keith Chamberlain (United States)
 
-Nickalus Redell (United States)
+Giles Dickenson-Jones (Australia)
 
-Axxos AG (Switzerland)
+Shalese Fitzgerald (United States)
+
+Roger Koenker (United Kingdom)
+
+Flavio Lombardo (Switzerland)
+
+Rudolph Martin (United States)
+
+Rees Morrison (United States)
+
+Quintessa Ltd (United Kingdom)
+
+Kem Phillips (United States)
+
+Alexandra Pippitt (United States)
+
+Bruno Rodrigues (Luxembourg)
+
+David Smith (United States)
+
+Rav Vaid (United States)
+
+Alejandro Verri Kozlowski (Argentina)
+
+Yihui Xie (China)
+
+ilustat, Lisbon (Portugal)
+
+Statistik Aargau, Aarau (Switzerland)
+
 
 
 # Supporting institutions
 
-\indent \indent Digital Ecology Limited , Berkeley (United Kingdom)
 
-NIFU Nordic Institute for Studies in Innovation, Research and Education, Oslo (Norway)
 
-RIATE (CNRS), Paris (France)
 
-Roseburg Forest Products, Springfield (United States)
 
-University of Iowa, Iowa City (United States)
+\indent \indent Departement Klinische Forschung, Basel (Switzerland)
+
+Ef-prime, Inc., Tokyo (Japan)
+
+Institute of Botany of the Czech Academy of Sciences, Průhonice (Czechia)
+
+oikostat GmbH, Ettiswil (Switzerland)
+
 
 
 # Supporting members
 
-\indent \indent Vedo Alagic (Austria)
 
-Kristoffer Winther Balling (Denmark)
 
-Joaquín Baquer-Miravete (Spain)
 
-Chris Billingham (United Kingdom)
 
-Susan M Carlson (United States)
+\indent \indent Richard Abdill (United States)
 
-Robert Carnell (United States)
+Douglas Adamoski (Brazil)
 
-William Chiu (United States)
+Mohammed Almozini (Saudi Arabia)
 
-Rafael Costa (Brazil)
+Tim Appelhans (Germany)
 
-Charles Cowens (United States)
+Tim Arbogast (United States)
 
-Terry Cox (United States)
+Michael Blanks (United States)
+
+Emmanuel Blondel (France)
+
+Gordon Blunt (United Kingdom)
+
+Riccardo Bonfichi (Italy)
+
+Tom Boulay (United States)
+
+Tamara Bozovic (New Zealand)
+
+Keith Chamberlain (United States)
+
+Cédric Chambru (Switzerland)
+
+John Chandler (United States)
+
+Michael Chirico (United States)
+
+Tom Clarke (United Kingdom)
+
+Gerard Conaghan (United Kingdom)
+
+Robin Crockett (United Kingdom)
 
 Alistair Cullum (United States)
 
-Gergely Daroczi (Hungary)
+Brandon Dahl (United States)
 
-Ajit de Silva (United States)
+Robert Daly (Australia)
 
-Dubravko Dolic (Germany)
+Kevin DeMaio (United States)
 
-Serban Dragne (United Kingdom)
+Anna Doizy (Réunion)
 
-Laurent Drouet (Italy)
+Fraser Edwards (United Kingdom)
 
-S Ellison (United Kingdom)
+Anthony Alan Egerton (Malaysia)
 
-Mitch Eppley (United States)
+Isaac Florence (United Kingdom)
 
-Stephen Ewing (United States)
-
-Gottfried Fischer (Austria)
+Neil Frazer (United States)
 
 David Freedman (United States)
 
-Keita Fukasawa (Japan)
+Bernd Fröhlich (Germany)
 
-Chris Hanretty (United Kingdom)
+Sven Garbade (Germany)
 
-James Harris (United States)
+Jan Marvin Garbuszus (Germany)
 
-Takehiko Hayashi (Japan)
+Eduardo García Galea (Spain)
 
-Malik Hebbat (Germany)
+Gabriel Gersztein (Brazil)
 
-Alessamdro Ielpi (Canada)
+SUJOY GHOSH (United States)
 
-Brian Johnson (United States)
+Anne Catherine Gieshoff (Switzerland)
 
-An Khuc (United States)
+Pavel Goriacko (United States)
 
-Miha Kosmac (United Kingdom)
+Brian Gramberg (Netherlands)
 
-Jan Herman Kuiper (United Kingdom)
+Spencer Graves (United States)
 
-Jindra Lacko (Czechia)
+Krushi Gurudu (United States)
 
-Bernardo Lares (Venezuela)
+Frank Hafner (United States)
 
-Rory Lawless (United States)
+Hlynur Hallgrímsson (Iceland)
 
-Seungdoe Lee (Korea, Republic of)
+Joe Harwood (United Kingdom)
 
-Mauro Lepore (United States)
+Bela Hausmann (Austria)
 
-Amanuel Medhanie (United States)
+Kieran Healy (United States)
 
-Harvey Minnigh (Puerto Rico)
+Philippe Heymans Smith (Costa Rica)
 
-Guido Möser (Germany)
+Adam Hill (United States)
 
-Mark Niemann-Ross (United States)
+Alexander Huelle (Germany)
 
-George Ostrouchov (United States)
+Heidi Imker (United States)
 
-Jaesung James Park (Korea, Republic of)
+Sebastian Jeworutzki (Germany)
 
-Matt Parker (United States)
+JUNE KEE KIM (Korea, Republic of)
 
-Bill Pikounis (United States)
+Ziyad Knio (United States)
 
-Kelly Pisane (Netherlands)
+Sebastian Koehler (Germany)
 
-Christian Seubert (Austria)
+Chris Kuty (United States)
 
-Jagat Sheth (United States)
+Luca La Rocca (Italy)
 
-Sindri Shtepani (Canada)
+Vishal Lama (United States)
+
+Thierry Lecerf (Switzerland)
+
+Thomas Levine (United States)
+
+Eric Lim (United Kingdom)
+
+Baoxiao Liu (Netherlands)
+
+Joseph Luchman (United States)
+
+Mehrad Mahmoudian (Finland)
+
+Gilles Marodon (France)
+
+Daniel McNichol (United States)
+
+Philippe MICHEL (France)
+
+Bogdan-Alexandru Micu (Luxembourg)
+
+Ernst Molitor (Germany)
+
+David Monterde (Spain)
+
+Stefan Moog (Germany)
+
+Keon-Woong Moon (Korea, Republic of)
+
+Steffen Moritz (Germany)
+
+yoshinobu nakahashi (Japan)
+
+Tsubasa Narihiro (Japan)
+
+Maciej Nasinski (Poland)
+
+Dan Orsholits (Switzerland)
+
+Antonio Paez (Canada)
+
+Sermet Pekin (Turkey)
+
+Elgin Perry (United States)
+
+PierGianLuca Porta Mana (Norway)
+
+Fergus Reig Gracia (Spain)
+
+Peter Ruckdeschel (Germany)
+
+Ingo Ruczinski (United States)
+
+Choonghyun Ryu (Korea, Republic of)
+
+John Schmitt (United States)
+
+Raoul Schorer (Switzerland)
+
+Dejan Schuster (Germany)
+
+Ivan Scotti (France)
 
 David Sides (United States)
 
-Murray Sondergard (Canada)
+Rachel Smith-Hunter (United States)
 
-Olga Starostecka (Germany)
+Matteo Starri (Italy)
 
-Marco Steenbergen (Switzerland)
+Harald Sterly (Germany)
 
-Berthold Stegemann (Germany)
+Tobias Strapatsas (Germany)
 
-Ricardo Torres-Jardón (Mexico)
+Kai Streicher (Switzerland)
 
-Nicholas Turner (United States)
+ROBERT Szabo (Sweden)
 
-Philipp Upravitelev (Russian Federation)
+Jan Tarabek (Czechia)
 
-Mark van der Loo (Netherlands)
+Koray Tascilar (Germany)
 
-Frans van Dunné (Costa Rica)
+Chris Toney (United States)
 
-Vincent van Hees (Netherlands)
+Robert van den Berg (Austria)
+
+Marcus Vollmer (Germany)
+
+Petr Waldauf (Czechia)
+
+Jaap Walhout (Netherlands)
+
+Sandra Ware (Australia)
+
+Fredrik Wartenberg (Sweden)
+
+Sam Waters (United States)
+
+Dieter Wilhelm (Germany)
+
+Nan Xiao (United States)
+
+Matti Zemack (Sweden)
+
+Vaidotas Zemlys-Balevičius (Lithuania)
+
+Lim Zhong Hao (Singapore)
 
 ```{r echo=FALSE, results='asis'}
-if (!knitr::is_latex_output()) cat("杨(Yang) 胡(Hu) (New Zealand)") else cat("Yang Hu (New Zealand)")
+if (!knitr::is_latex_output()) cat("广宇 曾 (China)") else cat("Guangyu Zeng (China)")
 ```
