mimonr changes and add missing files

--- a/_issues/2023-4/2023-4.Rmd
+++ b/_issues/2023-4/2023-4.Rmd
@@ -20,6 +20,9 @@ editors:
   - name: Rob Hyndman
     affiliation: Monash University
     country: Australia
+  - name: Emi Tanaka
+    affiliation: Australian National University
+    country: Australia
 articles:
   before: ~
   after: ~
