add 'and University of Leiden' to Mark's affiliation

--- a/_issues/2023-4/2023-4.Rmd
+++ b/_issues/2023-4/2023-4.Rmd
@@ -15,7 +15,7 @@ editors:
     affiliation: Maynooth University
     country: Ireland
   - name: Mark van der Loo
-    affiliation: Statistics Netherlands
+    affiliation: Statistics Netherlands and University of Leiden
     country: The Netherlands
   - name: Rob Hyndman
     affiliation: Monash University
