fix incorrect header levels in Forwards news

--- a/_news/RJ-2023-4-forwards/RJ-2023-4-forwards.Rmd
+++ b/_news/RJ-2023-4-forwards/RJ-2023-4-forwards.Rmd
@@ -30,7 +30,7 @@ journal:
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
 
-## Accessibility
+# Accessibility
 
 Di Cook, along with Mitchell O'Hara Wild, co-mentored Abhishek Ulayil on a 
 Google Summer of Code (GSoC) 2023 project [converting past R Journal articles to HTML](https://summerofcode.withgoogle.com/programs/2023/projects/4ygPTJA9) 
@@ -47,7 +47,7 @@ couple of accessibility issues, now incorporated \CRANpkg{BrailleR}. Work with
 Deepayan Sarkar led to improvement in the ability to extract content of graphics devices, see `summary.recordedplot()`. Work with Gabriel Becker led to a working solution to extract recent console output, see the `ShowMe()`, `SessionLog()`, 
 and `GrabLast()` functions.
 
-## Community engagement
+# Community engagement
 
 Kevin O'Brien, Ella Kaye and Heather Turner attended SatRdays London 2023. This  
 was an opportunity to catch up with community organizers, including Tuli Amutenya 
@@ -66,7 +66,7 @@ with buddies every three months.
 Also in November, Kevin O'Brien started a monthly community call for organizers 
 of R User Groups - upcoming meetings can be found on the [Global R User Group](https://www.meetup.com/globalr/) meetup.
 
-## Conferences
+# Conferences
 
 Julie Josse is on the program committee for useR! 2024 and Forwards have been 
 involved in suggesting people for keynotes and the organizing/program committees. 
@@ -81,7 +81,7 @@ were awarded to 25 participants. As in previous years, content was presented in
 Spanish, Portuguese, and English. In future, the conference will alternate 
 between in-person and online format.
 
-## R Contribution
+# R Contribution
 
 Forwards members continue to play an active role in the R Contribution Working 
 Group (RCWG). 
@@ -115,7 +115,7 @@ II Conference of R in Barcelona in November, where the audience were happy to
 hear that a Catalan translation has been started, with initial translations 
 due to be added to R 4.4.0.
 
-## Social Media
+# Social Media
 
 [//]: # (copy-editor: "gwynn gebeyehu" is the correct name and should not be edited)
 
@@ -124,9 +124,9 @@ a long overdue update, switching from the previous Hugo/blogdown framework to
 Quarto. This should be easier to maintain and we hope to add some fresh 
 content in 2024.
 
-## Changes in Membership
+# Changes in Membership
 
-### Previous members
+## Previous members
 
 The following members have stepped down:
 
