--- a/_articles/RJ-2023-081/RJ-2023-081.Rmd
+++ b/_articles/RJ-2023-081/RJ-2023-081.Rmd
@@ -1,6 +1,5 @@
 ---
-title: '[binGroup2](https://CRAN.R-project.org/package=binGroup2): Statistical Tools
-  for Infection Identification via Group Testing'
+title: 'binGroup2: Statistical Tools for Infection Identification via Group Testing'
 abstract: 'Group testing is the process of testing items as an amalgamation, rather
   than separately, to determine the binary status for each item. Its use was especially
   important during the COVID-19 pandemic through testing specimens for SARS-CoV-2.
