--- a/articles/RJ-2023-081/RJ-2023-081-src.tex
+++ b/articles/RJ-2023-081/RJ-2023-081-src.tex
@@ -965,7 +965,7 @@ of Defense, or the U.S. Government. Approved for public release: distribution
 unlimited. PA\#: USAFA-DF-2022-474.
 
 %Appendix A: Details for Figure \ref{fig:Expected-number-of}
-\section{Appendix A: Details for figure}
+\section*{Appendix A: Details for figure}
 
 Our separate R program provides the code to create Figure \ref{fig:Expected-number-of}.
 This figure presents a comparison of the three-stage hierarchical
@@ -979,7 +979,7 @@ code, we recommend using a few prevalence values and a maximum group
 size of 30 for an initial running of it. 
 
 % Appendix B: LabCorp's Array Testing
-\section{Appendix B: Labcorp's array testing}
+\section*{Appendix B: Labcorp's array testing}
 
 \citet{LabCorp} described the use of arrays for up to size $5\times5$.
 Our separate R program provides the code  to create Figure \ref{fig:LabCorp}
