--- a/articles/RJ-2023-082/RJ-2023-082-src.tex
+++ b/articles/RJ-2023-082/RJ-2023-082-src.tex
@@ -363,12 +363,22 @@ Turning next to the residual dependence structure, Figure \ref{figure:corr} show
 
 Figures \ref{figure:psi1} and \ref{figure:psi7} show posterior means for occupancy probabilities $\psi$ for seasons 1 and 7 for all six species. Hollow circles show the actual detections of each species in each corresponding season.  For all $T=10$ years, we observe a very strong relationship between predicted occupancy probabilities $\psi$ and species detections for all species and all seasons. 
 
+\section{Conclusion}
+
+In this article, we introduced the \texttt{R} package \pkg{multiocc} for implementing the multivariate spatio-temporal occupancy model proposed by \citet{hepler2021spatiotemporal}. This model overcomes many of the limitations of occupancy models that can be implemented with already existing \texttt{R} packages. More specifically, this model can jointly analyze $S \geq 1$ species over multiple seasons with a varying number of surveys at each site per season. The use of spatial basis functions makes this method feasible even with a large number of spatial locations. 
+
+Using this package to analyze imperfectly detected presence/absence data requires two main steps. First, the \code{multioccbuild()} function takes the raw data and outputs all matrices required to run the MCMC algorithm. Then, the \code{GibbsSampler()} function performs the Gibbs sampling algorithm to generate samples from the posterior distribution which can then be used to perform inference. We illustrated use of this package by analyzing occupancy data on six bird species in Switzerland from 2004 - 2013. The development of \pkg{multiocc} makes this multivariate spatio-temporal occupancy model accessible to the large community of researchers who use \texttt{R} for their data analysis needs. 
+
+\clearpage
+
 \begin{figure}[ht]
   \centering
   \includegraphics[width=5.5in]{psi1.png}
   \caption{An example of occupancy predictions for season 1.  Colors show posterior means of $\psi$ for each location and species, interpolated across space using a thin plate spline for ease of visualization only.  Hollow circles show points with detections of the species in that particular season.  As expected, regions of higher posterior probability match regions with greater density of detections.}
   \label{figure:psi1}
 \end{figure}
+
+\clearpage
 
 \begin{figure}[ht]
   \centering
@@ -377,9 +387,4 @@ Figures \ref{figure:psi1} and \ref{figure:psi7} show posterior means for occupan
   \label{figure:psi7}
 \end{figure}
 
-\section{Conclusion}
-
-In this article, we introduced the \texttt{R} package \pkg{multiocc} for implementing the multivariate spatio-temporal occupancy model proposed by \citet{hepler2021spatiotemporal}. This model overcomes many of the limitations of occupancy models that can be implemented with already existing \texttt{R} packages. More specifically, this model can jointly analyze $S \geq 1$ species over multiple seasons with a varying number of surveys at each site per season. The use of spatial basis functions makes this method feasible even with a large number of spatial locations. 
-
-Using this package to analyze imperfectly detected presence/absence data requires two main steps. First, the \code{multioccbuild()} function takes the raw data and outputs all matrices required to run the MCMC algorithm. Then, the \code{GibbsSampler()} function performs the Gibbs sampling algorithm to generate samples from the posterior distribution which can then be used to perform inference. We illustrated use of this package by analyzing occupancy data on six bird species in Switzerland from 2004 - 2013. The development of \pkg{multiocc} makes this multivariate spatio-temporal occupancy model accessible to the large community of researchers who use \texttt{R} for their data analysis needs. 
-
+\clearpage
