updated revision policy

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -90,9 +90,39 @@ You may have problems submitting if size of your submission zip file is more tha
 
 Your paper will be checked for reproducibility by running the code provided. Please ensure that the examples can be run in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time.
 
-### Re-submission or revision
+# What happens after you submit a paper
 
-Re-submission and revisions to accepted articles are received through the same site where new submissions are received (link below). When providing a re-submission or revision, you will need to **enter the identifier of the original submission** in the last field of the submission form. This also needs to be done if your paper has previously been rejected, and you have made appropriate corrections for it to be considered again.
+Once you have submitted a paper, the editorial board will go through the following steps.
+
+1. Deceide if your submission is technically in the correct format. In particular: 
+    - are all the requested files there and of the correct format?
+    - does the reproducibility code run?
+    - is all code used open source and available via CRAN or BioConductor?
+    - are all the data files (if any) in an open, non-proprietary format?
+2. If the technical test is passed, it is decided whether the submission is amenable for peer review:
+    - is the topic within scope?
+    - is the paper properly organized?
+    - is the writing style suitable for review?
+3. If the submission passes the second test, it will be sent our for review. This process might take several months.
+   You will receive one or more reviews, possibly with notes from one of the (associate) editors, and a _verdict_. There are four possible verdicts:
+    - *Accepted* Congratulations. Your paper will be published in the R Journal. You will are asked to upload a final version that will be proof-read and 
+      you will receive  a print proof before publication.
+    - *Minor revisions* The paper can be accepted conditional on a number of smaller revisions in the manuscript and/or the code. You are expected to fix
+      these issies within three months, and resubmit along with a letter where you describe, point-by-point, how the comments of the reviewers have been
+      addressed. The paper will not be reviewed again by peer reviewers.
+    - *Major revisions* The manuscript and/or the code need severe updates before the manuscript can be accepted for publication. You are expected to 
+      fix the issies within three months, and resubmit along with a letter where you describe, point-by-point how the comments of the reviewers have been 
+      addressed. The paper will be send back to the reviewers for a second round of review, which may result in any verdict.
+    - *Reject* Your paper is found to be unsuited for publication in the R Journal. No resubmission is expected.
+
+
+
+Re-submission and revisions to accepted articles are received through the same
+site where new submissions are received (link below). When providing a
+re-submission or revision, you will need to **enter the identifier of the
+original submission** in the last field of the submission form. This also needs
+to be done if your paper has previously been rejected, and you have made
+appropriate corrections for it to be considered again.
 
 ### Note on special issue articles
 
