--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -105,11 +105,11 @@ Once you have submitted a paper, the editorial board will go through the followi
     - is the writing style suitable for review?
 3. If the submission passes the second test, it will be sent our for review. This process might take several months.
    You will receive one or more reviews, possibly with notes from one of the (associate) editors, and a _verdict_. There are four possible verdicts:
-    - *Accepted* Congratulations. Your paper will be published in the R Journal. You will are asked to upload a final version that will be proof-read and 
+    - *Accepted* Your paper will be published in the R Journal. You will are asked to upload a final version that will be proof-read and 
       you will receive  a print proof before publication.
     - *Minor revisions* The paper can be accepted conditional on a number of smaller revisions in the manuscript and/or the code. You are expected to fix
       these issies within three months, and resubmit along with a letter where you describe, point-by-point, how the comments of the reviewers have been
-      addressed. The paper will not be reviewed again by peer reviewers.
+      addressed. The paper will not be reviewed again by peer reviewers, but the editor will check whether the points have been sufficiently addressed.
     - *Major revisions* The manuscript and/or the code need severe updates before the manuscript can be accepted for publication. You are expected to 
       fix the issies within three months, and resubmit along with a letter where you describe, point-by-point how the comments of the reviewers have been 
       addressed. The paper will be send back to the reviewers for a second round of review, which may result in any verdict.
