updated affiliation on request of the authors

--- a/_articles/RJ-2023-056/RJ-2023-056.Rmd
+++ b/_articles/RJ-2023-056/RJ-2023-056.Rmd
@@ -19,7 +19,7 @@ abstract: ' This paper introduces a very comprehensive implementation, available
   are illustrated by analyzing four real datasets obtained from longitudinal studies. '
 author:
 - name: L.H. Vanegas
-  affiliation: Departamento de Estadística, Universidad Nacional
+  affiliation: Departamento de Estadística, Universidad Nacional de Colombia
   email: |
     lhvanegasp@unal.edu.co
   address:
