--- a/articles/RJ-2023-056/RJ-2023-056.tex
+++ b/articles/RJ-2023-056/RJ-2023-056.tex
@@ -18,7 +18,7 @@ This paper introduces a very comprehensive implementation, available in the new 
 
 \address{%
 L.H. Vanegas\\
-Departamento de Estadística, Universidad Nacional\\%
+Departamento de Estadística, Universidad Nacional de Colombia\\%
 Ciudad Universitaria, Bogotá\\ Colombia\\
 %
 %
