--- a/index.Rmd
+++ b/index.Rmd
@@ -141,7 +141,6 @@ r-journal@r-project.org
 - Yanfei Kang, Beihang University, China
 - Ursula Laa, BOKU Vienna, Austria
 - Matthias Templ, University of Applied Sciences and Arts Northwestern Switzerland, Switzerland
-- Romain Lesur, INSEE, France
 - Jouni Helske, University of Turku, Finland
 - Christoph Sax, Cynkra, Switzerland
 - Thomas Fung, Macquarie University, Australia
@@ -173,6 +172,7 @@ Hurley (2022), Simon Urbanek (2023)
 
 ### Past Associate Editors
 
+- Romain Lesur, INSEE, France (2024)
 - Earo Wang (2020-2022)
 - Beth Atkinson (2020-2022)
 - Kieran Healy (2021-2022)
