--- a/index.Rmd
+++ b/index.Rmd
@@ -111,13 +111,12 @@ rejected, in progress or accepted/published. Papers labelled 'in progress' are u
 
 ### Editor-in-Chief
 
-Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands
-r-journal@r-project.org
+Rob Hyndman, Monash University, Australia r-journal@r-project.org
 
 ### Executive editors
 
-- Simon Urbanek, The University of Auckland, New Zealand
-- Rob Hyndman, Monash University, Australia
+- Emily Zabor, Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.
+- Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands
 - Emi Tanaka, Australian National University, Australia
 
 ### Associate editors
@@ -136,7 +135,6 @@ r-journal@r-project.org
 - Adam Loy, Carleton College, USA 
 - Nicholas Tierney, Telethon Kids, Australia
 - Susan Vanderplas, University of Nebraska, Lincoln, USA
-- Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA
 - Lucy D'Agostino McGowan, Wake Forest University, USA
 - Yanfei Kang, Beihang University, China
 - Ursula Laa, BOKU Vienna, Austria
@@ -168,7 +166,7 @@ Vince Carey (2009), Peter Dalgaard (2010), Heather Turner (2011), Martyn
 Plummer (2012), Hadley Wickham (2013), Deepayan Sarkar (2014), Bettina Grün
 (2015), Michael Lawrence (2016), Roger Bivand (2017), John Verzani (2018),
 Norman Matloff (2019), Michael Kane (2020), Dianne Cook (2021), Catherine
-Hurley (2022), Simon Urbanek (2023)
+Hurley (2022), Simon Urbanek (2023), Mark van der Loo (2024)
 
 ### Past Associate Editors
 
@@ -183,6 +181,7 @@ Hurley (2022), Simon Urbanek (2023)
 - Simone Blomberg (2021-2022)
 - Mark van der Loo (2021-2022)
 - Emi Tanaka (2022-2023)
+- Emily Zabor (2020-2024)
 
 
 
