Move RJ-2024-001 to first article of 2024-1 issue

--- a/_issues/2024-1/2024-1.Rmd
+++ b/_issues/2024-1/2024-1.Rmd
@@ -25,6 +25,8 @@ editors:
     country: Australia
 articles:
   before: null
+  "Contributed Research Articles":
+    - RJ-2024-001
   after: null
 output:
   rjtools::rjournal_pdf_issue: null
