updated editorial board

--- a/_issues/2024-1/2024-1.Rmd
+++ b/_issues/2024-1/2024-1.Rmd
@@ -7,10 +7,13 @@ volume: 16
 issue: 1
 editors:
   chief:
+  - name: Mark van der Loo
+    affiliation: Statistics Netherlands and Leiden University
+    country: Netherlands
+  executive:
   - name: Simon Urbanek
     affiliation: University of Auckland
     country: New Zealand
-  executive:
   - name: Catherine Hurley
     affiliation: Maynooth University
     country: Ireland
