Add @mitchelloharawild as a technical editor of 2024-1

--- a/_issues/2024-1/2024-1.Rmd
+++ b/_issues/2024-1/2024-1.Rmd
@@ -17,14 +17,15 @@ editors:
   - name: Catherine Hurley
     affiliation: Maynooth University
     country: Ireland
-  - name: Mark van der Loo
-    affiliation: Statistics Netherlands and University of Leiden
-    country: The Netherlands
   - name: Rob Hyndman
     affiliation: Monash University
     country: Australia
   - name: Emi Tanaka
     affiliation: Australian National University
+    country: Australia
+  technical:
+  - name: Mitchell O'Hara-Wild
+    affiliation: Monash University
     country: Australia
 articles:
   before: null
