2023-056 add de Colombia to affiliations

--- a/_articles/RJ-2023-056/RJ-2023-056.Rmd
+++ b/_articles/RJ-2023-056/RJ-2023-056.Rmd
@@ -26,7 +26,7 @@ author:
   - Ciudad Universitaria, Bogotá
   - Colombia
 - name: L.M. Rondón
-  affiliation: Departamento de Estadística, Universidad Nacional
+  affiliation: Departamento de Estadística, Universidad Nacional de Colombia
   email: |
     lmrondonp@unal.edu.co
   address:
