--- a/articles/RJ-2023-056/RJ-2023-056.tex
+++ b/articles/RJ-2023-056/RJ-2023-056.tex
@@ -28,7 +28,7 @@ Ciudad Universitaria, Bogotá\\ Colombia\\
 
 \address{%
 L.M. Rondón\\
-Departamento de Estadística, Universidad Nacional\\%
+Departamento de Estadística, Universidad Nacional de Colombia\\%
 Ciudad Universitaria, Bogotá\\ Colombia\\
 %
 %
